# MultiDimSPCI

./: pyproject.toml  wind_2d.ipynb
multidim_spci/: MultiDim_SPCI_class.py
